# SocketChatroomServer

./: CMakeLists.txt  README.md
SocketChatroomClient/: CMakeLists.txt  client.cpp  client.h
SocketChatroomServer/: CMakeLists.txt  main.cpp  server.cpp  server.h
WebsiteRoot/: index.html
